--- a/MinimarketNegocio/MinimarketNegocio.csproj
+++ b/MinimarketNegocio/MinimarketNegocio.csproj
@@ -41,13 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="E_Proveedores.cs" />
     <Compile Include="N_Almacen.cs" />
     <Compile Include="N_Categorias.cs" />
     <Compile Include="N_Departamento.cs" />
     <Compile Include="N_Distritos.cs" />
     <Compile Include="N_Marcas.cs" />
     <Compile Include="N_Productos.cs" />
-    <Compile Include="N_Proveedores.cs" />
     <Compile Include="N_Provincias.cs" />
     <Compile Include="N_Rubro.cs" />
     <Compile Include="N_Unidades_Medidas.cs" />
