--- a/MinimarketEntidades/MinimarketEntidades.csproj
+++ b/MinimarketEntidades/MinimarketEntidades.csproj
@@ -46,6 +46,7 @@
     <Compile Include="E_Categorias.cs" />
     <Compile Include="E_Departamento.cs" />
     <Compile Include="E_Distritos.cs" />
+    <Compile Include="E_E_Productos.cs" />
     <Compile Include="E_Marcas.cs" />
     <Compile Include="E_Productos.cs" />
     <Compile Include="E_Proveedores.cs" />
