--- a/MinimarketNegocio/MinimarketNegocio.csproj
+++ b/MinimarketNegocio/MinimarketNegocio.csproj
@@ -46,6 +46,7 @@
     <Compile Include="N_Categorias.cs" />
     <Compile Include="N_Departamento.cs" />
     <Compile Include="N_Distritos.cs" />
+    <Compile Include="N_E_Productos.cs" />
     <Compile Include="N_Marcas.cs" />
     <Compile Include="N_Productos.cs" />
     <Compile Include="N_Provincias.cs" />
